[tool.poetry]
name = "gitlab_to_gitea"
version = "0.1.0"
description = ""
authors = ["ryexandra <ryryryex@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-gitlab = "^2.4.0"
requests = "^2.24.0"
python-dateutil = "^2.8.1"
pygitea = {git = "https://github.com/h44z/pygitea"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
